fixing jumpy video cover

--- a/styles/scss/projectPages/_projectPages.module.scss
+++ b/styles/scss/projectPages/_projectPages.module.scss
@@ -58,13 +58,13 @@
         display: block;
         position: relative;
         z-index: 5656;
-        &.toggleIndex{
-            z-index: 5656565656;
-        }
+        // &.toggleIndex{
+        //     z-index: 5656565656;
+        // }
         margin-bottom: 10%;
         .videoOverlay{
             position: relative;
-            display: inline-block;
+            display: block;
             background-size: cover;
             background-position: center center;
             background-repeat: no-repeat;
